// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventHeader /> should render correctly 1`] = `
<Styled(styled.div)>
  <Flex
    align="center"
  >
    <Styled(styled.button)
      expand={true}
      small={true}
    />
    <Breadcrumbs
      crumbs={
        Array [
          Object {
            "path": "/season",
            "title": "Season Dashboard",
          },
          Object {
            "path": "/event/1",
            "title": "Some Event",
          },
        ]
      }
    />
  </Flex>
  <styled.div
    height="1.5rem"
  />
  <Flex
    align="flex-start"
    justify="space-between"
  >
    <FlexItem
      flex="1"
      margin="0 20px 0 0"
    >
      <Styled(Styled(styled.h1))>
        Some Event
      </Styled(Styled(styled.h1))>
      <Styled(Styled(styled.h4))>
        2018-06-18T15:47:45.706Z @dddd, MMMM Do, YYYY @ h:mm A
      </Styled(Styled(styled.h4))>
      <Styled(Link)
        to="/event/1/inventory"
      >
        <Styled(styled.span)
          color="#38A9DB"
        >
          See Inventory List
        </Styled(styled.span)>
      </Styled(Link)>
    </FlexItem>
    <Flex
      justify="flex-end"
    >
      <FlexItem
        flex="0 0 auto"
        margin="0 25px"
      >
        <Styled(styled.p)
          size="16px"
        >
          Inventory
        </Styled(styled.p)>
        <Styled(styled.p)
          color="#1A4B8A"
          size="22px"
        >
          -- / --
        </Styled(styled.p)>
        <Styled(styled.span)
          align="right"
          color="#1A4B8A"
        >
          Unsold / Sold
        </Styled(styled.span)>
      </FlexItem>
    </Flex>
    <FlexItem
      flex="0 0 auto"
      margin="0 25px"
    >
      <Styled(styled.p)
        size="16px"
      >
        Revenue
      </Styled(styled.p)>
      <Styled(styled.p)
        color="#1A4B8A"
        size="22px"
      >
        $739,472
      </Styled(styled.p)>
      <Styled(styled.span)
        align="right"
        color="#1A4B8A"
      >
        to date
      </Styled(styled.span)>
    </FlexItem>
  </Flex>
</Styled(styled.div)>
`;

exports[`<EventHeader /> should render correctly when on the location route 1`] = `
<Styled(styled.div)>
  <Flex
    align="center"
  >
    <Styled(styled.button)
      expand={true}
      small={true}
    />
    <Breadcrumbs
      crumbs={
        Array [
          Object {
            "path": "/season",
            "title": "Season Dashboard",
          },
          Object {
            "path": "/event/1",
            "title": "Some Event",
          },
          Object {
            "path": "/event/1/inventory",
            "title": "Inventory",
          },
        ]
      }
    />
  </Flex>
  <styled.div
    height="1.5rem"
  />
  <Flex
    align="flex-start"
    justify="space-between"
  >
    <FlexItem
      flex="1"
      margin="0 20px 0 0"
    >
      <Styled(Styled(styled.h1))>
        Some Event
      </Styled(Styled(styled.h1))>
      <Styled(Styled(styled.h4))>
        2018-06-18T15:47:45.706Z @dddd, MMMM Do, YYYY @ h:mm A
      </Styled(Styled(styled.h4))>
    </FlexItem>
    <Flex
      justify="flex-end"
    >
      <FlexItem
        flex="0 0 auto"
        margin="0 25px"
      >
        <Styled(styled.p)
          size="16px"
        >
          Inventory
        </Styled(styled.p)>
        <Styled(styled.p)
          color="#1A4B8A"
          size="22px"
        >
          -- / --
        </Styled(styled.p)>
        <Styled(styled.span)
          align="right"
          color="#1A4B8A"
        >
          Unsold / Sold
        </Styled(styled.span)>
      </FlexItem>
    </Flex>
    <FlexItem
      flex="0 0 auto"
      margin="0 25px"
    >
      <Styled(styled.p)
        size="16px"
      >
        Revenue
      </Styled(styled.p)>
      <Styled(styled.p)
        color="#1A4B8A"
        size="22px"
      >
        $739,472
      </Styled(styled.p)>
      <Styled(styled.span)
        align="right"
        color="#1A4B8A"
      >
        to date
      </Styled(styled.span)>
    </FlexItem>
  </Flex>
</Styled(styled.div)>
`;
